--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="css/style.css" rel="stylesheet" type="text/css"></link>
-    <script type="text/javascrupt" src="js/script.js"></script>
-    <title>Document</title>
+	<link rel="stylesheet" href="css/style.css">
+	<script
+	src="https://code.jquery.com/jquery-3.2.1.js"
+	integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+	crossorigin="anonymous"></script>
+	<script src="js/script.js"></script>
 </head>
 <body>
-<div id="container">
-<div class="card">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur cumque,
-    vitae, inventore libero non sapienteperspiciatis porro cupiditate eum ea dolorum
-    asperiores officia aliquam dolor maiores qui? Consequatur, quibusdam voluptatum?</p>
-</div>
-<div class="card">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur cumque,
-    vitae, inventore libero non sapienteperspiciatis porro cupiditate eum ea dolorum
-    asperiores officia aliquam dolor maiores qui? Consequatur, quibusdam voluptatum?</p>
-</div>
-</div>
-<script type="text/javascript" src="js/script.js"></script>
-    
+	<div class="container">
+		
+		<div class="box one">
+		</div>
+		<div class="box three">
+		</div>
+		<div class="box one">
+		</div>
+		
+		<div class="box two">
+		</div>
+		<div class="box one">
+		</div>
+		<div class="box two">
+		</div>
+		
+		<div class="box three">
+		</div>
+		<div class="box three">
+		</div>
+		<div class="box two">
+		</div>
+	</div>
 </body>
 </html>
